Fikser url issue

--- a/twig/Diplom/tilpass.html.twig
+++ b/twig/Diplom/tilpass.html.twig
@@ -3,5 +3,5 @@
 </div>
 
 {# Adding the following to the page will load the diploma Vue app: #}
-<link rel="stylesheet" id="UKMrapporterDiplomStyle-css" href="https://ukm.dev/festivalen/wp-content/plugins/UKMrapporter/client-diplom/dist/assets/build-diplom.css" media="all">
-<script src="https://ukm.dev/festivalen/wp-content/plugins/UKMrapporter/client-diplom/dist/assets/build-diplom.js" id="UKMrapporterDiplomJs-js"></script>
+<link rel="stylesheet" id="UKMrapporterDiplomStyle-css" href="https://{{ UKM_HOSTNAME }}/festivalen/wp-content/plugins/UKMrapporter/client-diplom/dist/assets/build-diplom.css" media="all">
+<script src="https://{{ UKM_HOSTNAME }}/festivalen/wp-content/plugins/UKMrapporter/client-diplom/dist/assets/build-diplom.js" id="UKMrapporterDiplomJs-js"></script>
