--- a/twig/UKMFestivalenHotell/rapport.html.twig
+++ b/twig/UKMFestivalenHotell/rapport.html.twig
@@ -21,7 +21,7 @@
                         <th scope="col">Epost</th>
                         <th scope="col">Rom</th>
                         <th scope="col">Gruppe</th>
-                        {# <th scope="col">Fylke</th> #}
+                        <th scope="col">Fylke</th>
                     </tr>
                 </thead>
 
@@ -59,7 +59,7 @@
                                         {% endfor %}
                                     {% endfor %}
                                 </td>
-                                {# <td>{{ fylker[fylke_key] ? fylker[fylke_key] : 'UKM Norge' }}</td> #}
+                                <td>{{ fylker[fylke_key] ? fylker[fylke_key] : 'UKM Norge' }}</td>
                             </tr>
                         </tbody>
                     {% endfor %}
@@ -150,7 +150,7 @@
         width: 33%;
     }
     .ledere-tr-videresending td {
-        width: 20%;
+        width: 16.6%;
     }
     .total-rapport-sum {
         border: solid 1px #00000036;
