Fjerner kommune på OvernattingLandsbyen på landsfestivalen

--- a/twig/OvernattingLandsbyen/rapport.html.twig
+++ b/twig/OvernattingLandsbyen/rapport.html.twig
@@ -5,7 +5,9 @@
             <thead>
                 <tr>
                     <th scope="col">Fylke</th>
-                    <th scope="col">Kommune</th>
+                    {% if arrangement.getType() != 'land' %}
+                        <th scope="col">Kommune</th>
+                    {% endif %}
                     <th scope="col">Ledere som overnatter i landsbyen</th>
                     <th scope="col">Ansvarlig leder</th>
                 </tr>
@@ -16,12 +18,16 @@
                 <tbody>
                     <tr class="ledere-tr">                       
                         <td><b>{{ fylker[fylke_key].getNavn() }}</b> ({{ arrangementer[key_arr].getNavn() }})</td>
-                        <td>
-                            {% for kommune in arrangementer[key_arr].getKommuner() %}
-                                <span>{{ kommune.getNavn }}</span>
-                                <br>
-                            {% endfor %}
-                        </td>
+    
+                        {% if arrangement.getType() != 'land' %}
+                            <td>
+                                {% for kommune in arrangementer[key_arr].getKommuner() %}
+                                    <span>{{ kommune.getNavn }}</span>
+                                    <br>
+                                {% endfor %}
+                            </td>
+                        {% endif %}
+                        
                         <td><b>{{ arr_data['total'] ? arr_data['total'] : 0 }}</b> leder{{ arr_data['total'] > 1 ? 'e' : '' }} overnatter</td>
                         <td>{{ arr_data['hovedLedere'].getNavn() }} - {{ arr_data['hovedLedere'].getMobil() }}</td>
                     </tr>
