Iframe (video) skal ikke vises som full screen

--- a/ukmrapporter.css
+++ b/ukmrapporter.css
@@ -158,3 +158,6 @@ Css til siden man velger hva salgs rapport man vil generer
     margin: 0;
     color: #5b5b5b !important;
 }
+td.iframe {
+    position: relative !important;
+}
