--- a/twig/Components/Innslag/Mediefiler/filmer.html.twig
+++ b/twig/Components/Innslag/Mediefiler/filmer.html.twig
@@ -7,7 +7,7 @@
 					<br/>
 					<a href="{{ film.getTvUrl() }}" target="_blank">{{ film.getTvUrl() }}</a>
 				</td>
-				<td>{{ film.getEmbedHtml(null, 'width: 100% !important; max-height: 30vh !important;')|raw }}</td>
+				<td style="position: relative; height: 200px;">{{ film.getEmbedHtml(null, 'width: 100% !important; max-height: 30vh !important;')|raw }}</td>
 			</tr>
 		{% endfor %}
 	</table>
