--- a/twig/Timeplan/tilpass.html.twig
+++ b/twig/Timeplan/tilpass.html.twig
@@ -9,5 +9,10 @@
         {% for fylke in alleFylker %}
 			{% include "checkbox.html.twig" with {id: 'fylke_'~ fylke.getId() , title: fylke.getNavn()} %}
         {% endfor %}
+		<li class="list-group-item list-group-title">
+			<h4>Deltakere</h4>
+		</li>
+		{% include "checkbox.html.twig" with {id: 'deltakere_tel', title: 'Mobil'} %}
 	</ol>
+
 </div>
